add removed translations

--- a/packages/hoppscotch-common/locales/ar.json
+++ b/packages/hoppscotch-common/locales/ar.json
@@ -125,44 +125,44 @@
     "we_sent_magic_link_description": "تحقق من بريدك الوارد - لقد أرسلنا بريدًا إلكترونيًا إلى {email}. يحتوي على رابط سحري سيسجل دخولك."
   },
   "authorization": {
-  "generate_token": "توليد رمز الوصول",
-  "graphql_headers": "تُرسل رؤوس التفويض كجزء من الحمولة إلى `connection_init`",
-  "include_in_url": "تضمين في URL",
-  "inherited_from": "موروثة من {auth} من المجموعة الأصلية {collection}",
-  "learn": "تعلم كيف",
-  "oauth": {
-    "redirect_auth_server_returned_error": "عاد خادم Authorization بحالة خطأ",
-    "redirect_auth_token_request_failed": "فشل الطلب للحصول على رمز Authorization",
-    "redirect_auth_token_request_invalid_response": "استجابة غير صالحة من الرمز عند طلب رمز Authorization endpoint",
-    "redirect_invalid_state": "قيمة حالة غير صالحة موجودة في إعادة التوجيه",
-    "redirect_no_auth_code": "لا يوجد رمز تفويض في إعادة التوجيه",
-    "redirect_no_client_id": "لم يتم تعريف رقم العميل",
-    "redirect_no_client_secret": "لم يتم تعريف سر العميل",
-    "redirect_no_code_verifier": "لم يتم تعريف محقق الشيفرة",
-    "redirect_no_token_endpoint": "لم يتم تعريف endpoint الرمز",
-    "something_went_wrong_on_oauth_redirect": "حدث خطأ أثناء إعادة توجيه OAuth",
-    "something_went_wrong_on_token_generation": "حدث خطأ أثناء توليد الرمز",
-    "token_generation_oidc_discovery_failed": "فشل توليد الرمز: فشل اكتشاف OpenID Connect",
-    "grant_type": "نوع المنح",
-    "grant_type_auth_code": "رمز Authorization",
-    "token_fetched_successfully": "تم الحصول على الرمز بنجاح",
-    "token_fetch_failed": "فشل الحصول على الرمز",
-    "validation_failed": "فشل التحقق، يرجى التحقق من حقول النموذج",
-    "label_authorization_endpoint": "Authorization endpoint",
-    "label_client_id": "معرف العميل",
-    "label_client_secret": "سر العميل",
-    "label_code_challenge": "تحدي الشيفرة",
-    "label_code_challenge_method": "طريقة تحدي الشيفرة",
-    "label_code_verifier": "محقق الشيفرة",
-    "label_scopes": "النطاقات",
-    "label_token_endpoint": "endpoint الرمز",
-    "label_use_pkce": "استخدم PKCE",
-    "label_implicit": "ضمني",
-    "label_password": "كلمة المرور",
-    "label_username": "اسم المستخدم",
-    "label_auth_code": "رمز Authorization",
-    "label_client_credentials": "بيانات اعتماد العميل"
-  },
+    "generate_token": "توليد رمز الوصول",
+    "graphql_headers": "تُرسل رؤوس التفويض كجزء من الحمولة إلى `connection_init`",
+    "include_in_url": "تضمين في URL",
+    "inherited_from": "موروثة من {auth} من المجموعة الأصلية {collection}",
+    "learn": "تعلم كيف",
+    "oauth": {
+      "redirect_auth_server_returned_error": "عاد خادم Authorization بحالة خطأ",
+      "redirect_auth_token_request_failed": "فشل الطلب للحصول على رمز Authorization",
+      "redirect_auth_token_request_invalid_response": "استجابة غير صالحة من الرمز عند طلب رمز Authorization endpoint",
+      "redirect_invalid_state": "قيمة حالة غير صالحة موجودة في إعادة التوجيه",
+      "redirect_no_auth_code": "لا يوجد رمز تفويض في إعادة التوجيه",
+      "redirect_no_client_id": "لم يتم تعريف رقم العميل",
+      "redirect_no_client_secret": "لم يتم تعريف سر العميل",
+      "redirect_no_code_verifier": "لم يتم تعريف محقق الشيفرة",
+      "redirect_no_token_endpoint": "لم يتم تعريف endpoint الرمز",
+      "something_went_wrong_on_oauth_redirect": "حدث خطأ أثناء إعادة توجيه OAuth",
+      "something_went_wrong_on_token_generation": "حدث خطأ أثناء توليد الرمز",
+      "token_generation_oidc_discovery_failed": "فشل توليد الرمز: فشل اكتشاف OpenID Connect",
+      "grant_type": "نوع المنح",
+      "grant_type_auth_code": "رمز Authorization",
+      "token_fetched_successfully": "تم الحصول على الرمز بنجاح",
+      "token_fetch_failed": "فشل الحصول على الرمز",
+      "validation_failed": "فشل التحقق، يرجى التحقق من حقول النموذج",
+      "label_authorization_endpoint": "Authorization endpoint",
+      "label_client_id": "معرف العميل",
+      "label_client_secret": "سر العميل",
+      "label_code_challenge": "تحدي الشيفرة",
+      "label_code_challenge_method": "طريقة تحدي الشيفرة",
+      "label_code_verifier": "محقق الشيفرة",
+      "label_scopes": "النطاقات",
+      "label_token_endpoint": "endpoint الرمز",
+      "label_use_pkce": "استخدم PKCE",
+      "label_implicit": "ضمني",
+      "label_password": "كلمة المرور",
+      "label_username": "اسم المستخدم",
+      "label_auth_code": "رمز Authorization",
+      "label_client_credentials": "بيانات اعتماد العميل"
+    },
   "pass_key_by": "تمرير بواسطة",
   "pass_by_query_params_label": "معلمات الاستعلام",
   "pass_by_headers_label": "الرؤوس",
@@ -200,7 +200,7 @@
 },
   "confirm": {
     "close_unsaved_tab": "هل أنت متأكد أنك تريد إغلاق هذه التبويبة؟",
-    "close_unsaved_tabs": "هل أنت متأكد أنك تريد إغلاق جميع التبويبات؟ سيتم فقدان {count} من التبويبات غير المحفوظة.",
+    "close_unsaved_tabs": "هل أنت متأكد أنك تريد إغلاق جميع علامات التبويب سيتم فقدان {count} من التبويبات غير المحفوظة.",
     "exit_team": "هل أنت متأكد أنك تريد مغادرة هذا الفريق؟",
     "logout": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
     "remove_collection": "هل أنت متأكد أنك تريد حذف هذه المجموعة نهائيًا؟",
@@ -248,8 +248,8 @@
     "variable": "متغير {count}"
   },
   "documentation": {
-    "generate": "توليد الوثائق",
-    "generate_message": "قم باستيراد أي مجموعة هوبسكوتش لإنشاء وثائق API أثناء التنقل."
+    "generate": "توليد docs",
+    "generate_message": "قم باستيراد أي مجموعة هوبسكوتش لإنشاء API docs أثناء التنقل."
   },
   "empty": {
     "authorization": "هذا الطلب لا يستخدم أي إذن",
@@ -280,22 +280,22 @@
     "access_tokens": "رموز الوصول فارغة",
     "shortcodes": "الرموز القصيرة فارغة"
   },
-  "environment": {
-    "add_to_global": "أضف إلى العام",
-    "added": "تمت إضافة البيئة",
-    "create_new": "إنشاء بيئة جديدة",
-    "created": "تم إنشاء البيئة",
-    "deleted": "تم حذف البيئة",
-    "duplicated": "تم تكرار البيئة",
-    "edit": "تحرير البيئة",
-    "empty_variables": "لا توجد متغيرات",
-    "global": "عام",
-    "global_variables": "المتغيرات العامة",
-    "import_or_create": "استيراد أو إنشاء بيئة",
-    "invalid_name": "يرجى كنابة اسم صحيح للبيئة",
-    "list": "متغيرات البيئة",
-    "my_environments": "البيئات الخاصة بي",
-    "name": "الاسم",
+    "environment": {
+      "add_to_global": "أضف إلى العام",
+      "added": "تمت إضافة البيئة",
+      "create_new": "إنشاء بيئة جديدة",
+      "created": "تم إنشاء البيئة",
+      "deleted": "تم حذف البيئة",
+      "duplicated": "تم تكرار البيئة",
+      "edit": "تحرير البيئة",
+      "empty_variables": "لا توجد متغيرات",
+      "global": "عام",
+      "global_variables": "المتغيرات العامة",
+      "import_or_create": "استيراد أو إنشاء بيئة",
+      "invalid_name": "يرجى كنابة اسم صحيح للبيئة",
+      "list": "متغيرات البيئة",
+      "my_environments": "البيئات الخاصة بي",
+      "name": "الاسم",
       "nested_overflow": "المتغيرات البيئية المتداخلة محدودة بـ 10 مستويات",
       "new": "بيئة جديدة",
       "no_active_environment": "لا توجد بيئة نشطة",
@@ -357,14 +357,117 @@
     "generate_access_token": "حدث خطأ أثناء توليد رمز الوصول",
     "delete_access_token": "حدث خطأ أثناء حذف رمز الوصول"
   },
- "inspections": {
-  "description": "فحص الأخطاء المحتملة",
-  "environment": {
-    "add_environment": "إضافة إلى البيئة",
-    "add_environment_value": "إضافة قيمة",
-    "empty_value": "قيمة البيئة فارغة للمتغير '{variable}'",
-    "not_found": "لم يتم العثور على متغير البيئة “{environment}”."
+   "export": {
+    "as_json": "تصدير كملف JSON",
+    "create_secret_gist": "إنشاء Gist سري",
+    "create_secret_gist_tooltip_text": "تصدير كـ Gist سري",
+    "failed": "حدث خطأ أثناء التصدير",
+    "secret_gist_success": "تم التصدير بنجاح كـ Gist سري",
+    "require_github": "تسجيل الدخول باستخدام GitHub لإنشاء Gist سري",
+    "title": "تصدير",
+    "success": "تم التصدير بنجاح",
+    "gist_created": "تم إنشاء Gist"
   },
+  "filter": {
+    "all": "الكل",
+    "none": "لا شيء",
+    "starred": "المفضلة"
+  },
+  "folder": {
+    "created": "تم إنشاء المجلد",
+    "edit": "تحرير المجلد",
+    "invalid_name": "يرجى تقديم اسم للمجلد",
+    "name_length_insufficient": "يجب أن يتكون اسم المجلد من 3 أحرف على الأقل",
+    "new": "مجلد جديد",
+    "renamed": "تمت إعادة تسمية المجلد"
+  },
+  "graphql": {
+    "connection_switch_confirm": "هل تريد الاتصال بنقطة النهاية الأخيرة لـ GraphQL؟",
+    "connection_switch_new_url": "التبديل إلى علامة تبويب أخرى سيفصلك عن الاتصال النشط بـ GraphQL. عنوان URL للاتصال الجديد هو",
+    "connection_switch_url": "أنت متصل بنقطة نهاية GraphQL وعنوان URL للاتصال هو",
+    "mutations": "التغييرات",
+    "schema": "المخطط",
+    "subscriptions": "الاشتراكات",
+    "switch_connection": "تبديل الاتصال",
+    "url_placeholder": "أدخل عنوان URL لنقطة نهاية GraphQL"
+  },
+  "graphql_collections": {
+    "title": "مجموعات GraphQL"
+  },
+  "group": {
+    "time": "الوقت",
+    "url": "الرابط"
+  },
+  "header": {
+    "install_pwa": "تثبيت التطبيق",
+    "login": "تسجيل الدخول",
+    "save_workspace": "حفظ مساحة العمل الخاصة بي"
+  },
+  "helpers": {
+    "authorization": "سيتم إنشاء رأس التفويض تلقائيًا عند إرسال الطلب.",
+    "collection_properties_authorization": "سيتم تعيين هذا التفويض لكل طلب في هذه المجموعة.",
+    "collection_properties_header": "سيتم تعيين هذا الرأس لكل طلب في هذه المجموعة.",
+    "generate_documentation_first": "قم بإنشاء الوثائق أولاً",
+    "network_fail": "تعذر الوصول إلى نقطة النهاية الخاصة بـ API. تحقق من اتصال الشبكة الخاص بك أو اختر Interceptor مختلفًا وحاول مرة أخرى.",
+    "offline": "أنت تستخدم Hoppscotch دون اتصال. سيتم مزامنة التحديثات عندما تكون متصلاً بالإنترنت، بناءً على إعدادات مساحة العمل.",
+    "offline_short": "أنت تستخدم Hoppscotch دون اتصال.",
+    "post_request_tests": "يتم كتابة نصوص الاختبار بلغة JavaScript، ويتم تشغيلها بعد استلام الاستجابة.",
+    "pre_request_script": "يتم كتابة نصوص ما قبل الطلب بلغة JavaScript، ويتم تشغيلها قبل إرسال الطلب.",
+    "script_fail": "يبدو أن هناك خللاً في نص ما قبل الطلب. تحقق من الخطأ أدناه وقم بإصلاح النص وفقًا لذلك.",
+    "test_script_fail": "يبدو أن هناك خطأ في نص الاختبار. يرجى إصلاح الأخطاء وإعادة تشغيل الاختبارات مرة أخرى",
+    "tests": "اكتب نص اختبار لأتمتة التصحيح."
+  },
+  "hide": {
+    "collection": "طي لوحة المجموعة",
+    "more": "إخفاء المزيد",
+    "preview": "إخفاء المعاينة",
+    "sidebar": "طي الشريط الجانبي"
+  },
+  "import": {
+    "collections": "استيراد المجموعات",
+    "curl": "استيراد cURL",
+    "environments_from_gist": "استيراد من Gist",
+    "environments_from_gist_description": "استيراد بيئات Hoppscotch من Gist",
+    "failed": "حدث خطأ أثناء الاستيراد: التنسيق غير معترف به",
+    "from_file": "استيراد من ملف",
+    "from_gist": "استيراد من Gist",
+    "from_gist_description": "استيراد من رابط Gist",
+    "from_insomnia": "استيراد من Insomnia",
+    "from_insomnia_description": "استيراد من مجموعة Insomnia",
+    "from_json": "استيراد من Hoppscotch",
+    "from_json_description": "استيراد من ملف مجموعة Hoppscotch",
+    "from_my_collections": "استيراد من مجموعاتي الشخصية",
+    "from_my_collections_description": "استيراد من ملف مجموعاتي الشخصية",
+    "from_openapi": "استيراد من OpenAPI",
+    "from_openapi_description": "استيراد من ملف مواصفات OpenAPI (YML/JSON)",
+    "from_postman": "استيراد من Postman",
+    "from_postman_description": "استيراد من مجموعة Postman",
+    "from_url": "استيراد من رابط URL",
+    "gist_url": "أدخل رابط Gist",
+    "gql_collections_from_gist_description": "استيراد مجموعات GraphQL من Gist",
+    "hoppscotch_environment": "بيئة Hoppscotch",
+    "hoppscotch_environment_description": "استيراد ملف JSON لبيئة Hoppscotch",
+    "import_from_url_invalid_fetch": "تعذر الحصول على البيانات من الرابط",
+    "import_from_url_invalid_file_format": "حدث خطأ أثناء استيراد المجموعات",
+    "import_from_url_invalid_type": "نوع غير مدعوم. القيم المقبولة هي 'hoppscotch'، 'openapi'، 'postman'، 'insomnia'",
+    "import_from_url_success": "تم استيراد المجموعات بنجاح",
+    "insomnia_environment_description": "استيراد بيئة Insomnia من ملف JSON/YAML",
+    "json_description": "استيراد المجموعات من ملف JSON الخاص بـ Hoppscotch",
+    "postman_environment": "بيئة Postman",
+    "postman_environment_description": "استيراد بيئة Postman من ملف JSON",
+    "title": "استيراد",
+    "file_size_limit_exceeded_warning_multiple_files": "الملفات المختارة تتجاوز الحد الموصى به وهو 10MB. سيتم استيراد الملفات {files} الأولى المختارة فقط",
+    "file_size_limit_exceeded_warning_single_file": "الملف المختار حاليًا يتجاوز الحد الموصى به وهو 10MB. يرجى اختيار ملف آخر.",
+    "success": "تم الاستيراد بنجاح"
+  },
+ "inspections": {
+    "description": "فحص الأخطاء المحتملة",
+    "environment": {
+      "add_environment": "إضافة إلى البيئة",
+      "add_environment_value": "إضافة قيمة",
+      "empty_value": "قيمة البيئة فارغة للمتغير '{variable}'",
+      "not_found": "لم يتم العثور على متغير البيئة “{environment}”."
+    },
   "header": {
     "cookie": "لا يسمح المتصفح لـ هوبسكوتش بتعيين عنوان كوكي. بينما نعمل على تطبيق هوبسكوتش لسطح المكتب (قريبًا)، يرجى استخدام عنوان Authorization بدلاً من ذلك."
   },
@@ -468,9 +571,9 @@
     "choose_language": "اختر اللغة",
     "content_type": "Content-Type",
     "content_type_titles": {
-      "others": "Others",
+      "others": "أخرى",
       "structured": "Structured",
-      "text": "Text"
+      "text": "نص"
     },
     "different_collection": "لا يمكن إعادة ترتيب الطلبات من مجموعات مختلفة",
     "duplicated": "تم تكرار الطلب",
