feat: generate data schema

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -641,7 +641,8 @@
     "title": "Response",
     "video": "Video",
     "waiting_for_connection": "waiting for connection",
-    "xml": "XML"
+    "xml": "XML",
+    "generate_data_schema": "Generate Data Schema"
   },
   "settings": {
     "accent_color": "Accent color",
