chore: clean up

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -642,7 +642,8 @@
     "video": "Video",
     "waiting_for_connection": "waiting for connection",
     "xml": "XML",
-    "generate_data_schema": "Generate Data Schema"
+    "generate_data_schema": "Generate Data Schema",
+    "data_schema": "Data Schema"
   },
   "settings": {
     "accent_color": "Accent color",
