chore: add graphql response filename locale

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -386,8 +386,9 @@
   "filename": {
     "cookie_key_value_pairs": "Cookie",
     "codegen": "{request_name} - code",
+    "graphql_response": "GraphQL-Response",
     "lens": "{request_name} - response",
-    "realtime": "Response"
+    "realtime_response": "Realtime-Response"
   },
   "filter": {
     "all": "All",
