--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1111,6 +1111,9 @@
   },
   "ai_experiments": {
     "generate_request_name": "Generate Request Name Using AI",
-    "generate_or_modify_request_body": "Generate or Modify Request Body"
+    "generate_or_modify_request_body": "Generate or Modify Request Body",
+    "modify_with_ai": "Modify with AI",
+    "generate_or_modify_request_body_input_placeholder": "Enter your prompt to modify request body",
+    "accept_change": "Accept Change"
   }
 }
