chore: add i18n locale

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -43,6 +43,7 @@
     "rename": "Rename",
     "restore": "Restore",
     "save": "Save",
+    "save_as_example": "Save as example",
     "scroll_to_bottom": "Scroll to bottom",
     "scroll_to_top": "Scroll to top",
     "search": "Search",
@@ -224,6 +225,7 @@
     "remove_folder": "Are you sure you want to permanently delete this folder?",
     "remove_history": "Are you sure you want to permanently delete all history?",
     "remove_request": "Are you sure you want to permanently delete this request?",
+    "remove_response": "Are you sure you want to permanently delete this response?",
     "remove_shared_request": "Are you sure you want to permanently delete this shared request?",
     "remove_team": "Are you sure you want to delete this workspace?",
     "remove_telemetry": "Are you sure you want to opt-out of Telemetry?",
@@ -528,7 +530,9 @@
     "confirm": "Confirm",
     "customize_request": "Customize Request",
     "edit_request": "Edit Request",
+    "edit_response": "Edit Response",
     "import_export": "Import / Export",
+    "response_name": "Response Name",
     "share_request": "Share Request"
   },
   "mqtt": {
@@ -631,6 +635,7 @@
     "rename": "Rename Request",
     "renamed": "Request renamed",
     "request_variables": "Request variables",
+    "response_name_exists": "Response name already exists",
     "run": "Run",
     "save": "Save",
     "save_as": "Save as",
@@ -650,12 +655,15 @@
   "response": {
     "audio": "Audio",
     "body": "Response Body",
+    "duplicated": "Response duplicated",
+    "duplicate_name_error": "Same name response already exists",
     "filter_response_body": "Filter JSON response body (uses JSONPath syntax)",
     "headers": "Headers",
     "html": "HTML",
     "image": "Image",
     "json": "JSON",
     "pdf": "PDF",
+    "please_save_request": "Save the request to create example",
     "preview_html": "Preview HTML",
     "raw": "Raw",
     "size": "Size",
