--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -674,7 +674,8 @@
     "waiting_for_connection": "waiting for connection",
     "xml": "XML",
     "generate_data_schema": "Generate Data Schema",
-    "data_schema": "Data Schema"
+    "data_schema": "Data Schema",
+    "saved": "Response saved"
   },
   "settings": {
     "accent_color": "Accent color",
