fix: issue with saveContext while reordering and moving

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -666,6 +666,7 @@
     "please_save_request": "Save the request to create example",
     "preview_html": "Preview HTML",
     "raw": "Raw",
+    "renamed": "Response renamed",
     "size": "Size",
     "status": "Status",
     "time": "Time",
