chore: update copytext casing

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -463,8 +463,8 @@
     "from_json_description": "Import from Hoppscotch collection file",
     "from_my_collections": "Import from Personal Collections",
     "from_my_collections_description": "Import from Personal Collections file",
-    "from_all_collections": "Import from another workspace",
-    "from_all_collections_description": "Import any collection from another workspace to the current workspace",
+    "from_all_collections": "Import from Another Workspace",
+    "from_all_collections_description": "Import any collection from Another Workspace to the current workspace",
     "from_openapi": "Import from OpenAPI",
     "from_openapi_description": "Import from OpenAPI specification file (YML/JSON)",
     "from_postman": "Import from Postman",
