--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1138,6 +1138,12 @@
   },
   "ai_experiments": {
     "generate_request_name": "Generate Request Name Using AI",
-    "generate_or_modify_request_body": "Generate or Modify Request Body"
+    "generate_or_modify_request_body": "Generate or Modify Request Body",
+    "modify_with_ai": "Modify with AI",
+    "generate_or_modify_request_body_input_placeholder": "Enter your prompt to modify request body",
+    "accept_change": "Accept Change",
+    "feedback_success": "Feedback submitted successfully",
+    "feedback_failure": "Failed to submit feedback",
+    "feedback_thank_you": "Thank you for your feedback!"
   }
 }
