--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -676,7 +676,8 @@
     "xml": "XML",
     "generate_data_schema": "Generate Data Schema",
     "data_schema": "Data Schema",
-    "saved": "Response saved"
+    "saved": "Response saved",
+    "invalid_name": "Please provide a name for the response"
   },
   "settings": {
     "accent_color": "Accent color",
