--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -393,7 +393,8 @@
     "codegen": "{request_name} - code",
     "graphql_response": "GraphQL-Response",
     "lens": "{request_name} - response",
-    "realtime_response": "Realtime-Response"
+    "realtime_response": "Realtime-Response",
+    "response_interface": "Response-Interface"
   },
   "filter": {
     "all": "All",
