chore: add missing `i18n` string entry

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1147,6 +1147,7 @@
     "feedback_failure": "Failed to submit feedback",
     "feedback_thank_you": "Thank you for your feedback!",
     "feedback_cta_text_long": "Rate the generation, helps us to improve",
-    "feedback_cta_request_name": "Did you like the generated name?"
+    "feedback_cta_request_name": "Did you like the generated name?",
+    "modify_request_body_error": "Failed to modify request body"
   }
 }
