--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -79,7 +79,16 @@
     "verify_ssl_certs": "Verify SSL Certificates",
     "client_certs": "Client Certificates",
     "use_http_proxy": "Use HTTP Proxy",
-    "proxy_capabilities": "Hoppscotch Agent supports HTTP/HTTPS/SOCKS proxies along with NTLM and Basic Auth in those proxies. Include the username and password for the proxy authentication in the URL itself."
+    "proxy_capabilities": "Hoppscotch Agent supports HTTP/HTTPS/SOCKS proxies along with NTLM and Basic Auth in those proxies. Include the username and password for the proxy authentication in the URL itself.",
+    "add_cert_file": "Add Certificate File",
+    "add_client_cert": "Add Client Certificate",
+    "add_key_file": "Add Key File",
+    "domain": "Domain",
+    "cert": "Certificate",
+    "key": "Key",
+    "pfx_or_pkcs": "PFX/PKCS12",
+    "pfx_or_pkcs_file": "PFX/PKCS12 File",
+    "add_pfx_or_pkcs_file": "Add PFX/PKCS12 File"
   },
   "app": {
     "chat_with_us": "Chat with us",
