chore: add a section called general in settings

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -728,11 +728,15 @@
     "extensions": "Browser extension",
     "extensions_use_toggle": "Use the browser extension to send requests (if present)",
     "follow": "Follow us",
+    "general": "General",
+    "general_description": " General settings used in the application",
     "interceptor": "Interceptor",
     "interceptor_description": "Middleware between application and APIs.",
     "language": "Language",
     "light_mode": "Light",
     "official_proxy_hosting": "Official Proxy is hosted by Hoppscotch.",
+    "parameter_encoding": "Parameter Encoding",
+    "parameter_encoding_description": "Use encoding for parameters in requests",
     "profile": "Profile",
     "profile_description": "Update your profile details",
     "profile_email": "Email address",
