--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -714,12 +714,18 @@
     "account_email_description": "Your primary email address.",
     "account_name_description": "This is your display name.",
     "additional": "Additional Settings",
+    "auto_mode": "Auto",
+    "auto_mode_tooltip": "Encode the parameters in the request only if some special characters are present",
     "background": "Background",
     "black_mode": "Black",
     "choose_language": "Choose language",
     "dark_mode": "Dark",
     "delete_account": "Delete account",
     "delete_account_description": "Once you delete your account, all your data will be permanently deleted. This action cannot be undone.",
+    "disable_mode": "Disable",
+    "disable_mode_tooltip": "Never encode the parameters in the request",
+    "encode_mode": "Encode",
+    "encode_mode_tooltip": "Always encode the parameters in the request",
     "expand_navigation": "Expand navigation",
     "experiments": "Experiments",
     "experiments_notice": "This is a collection of experiments we're working on that might turn out to be useful, fun, both, or neither. They're not final and may not be stable, so if something overly weird happens, don't panic. Just turn the dang thing off. Jokes aside, ",
