--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -79,6 +79,7 @@
     "not_running_title": "Agent not detected",
     "registration_title": "Agent registration",
     "verify_ssl_certs": "Verify SSL Certificates",
+    "ca_certs": "CA Certificates",
     "client_certs": "Client Certificates",
     "use_http_proxy": "Use HTTP Proxy",
     "proxy_capabilities": "Hoppscotch Agent supports HTTP/HTTPS/SOCKS proxies along with NTLM and Basic Auth in those proxies. Include the username and password for the proxy authentication in the URL itself.",
