fix: remove extra comma

--- a/packages/hoppscotch-common/locales/de.json
+++ b/packages/hoppscotch-common/locales/de.json
@@ -831,7 +831,7 @@
       "send_request": "Anfrage senden",
       "share_request": "Anfrage teilen",
       "show_code": "Code-Schnipsel generieren",
-      "title": "Anfrage",
+      "title": "Anfrage"
     },
     "response": {
       "copy": "Antwort in die Zwischenablage kopieren",
