chore: update copytext

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -741,8 +741,8 @@
     "language": "Language",
     "light_mode": "Light",
     "official_proxy_hosting": "Official Proxy is hosted by Hoppscotch.",
-    "parameter_encoding": "Parameter Encoding",
-    "parameter_encoding_description": "Use encoding for parameters in requests",
+    "query_parameters_encoding": "Query Parameters Encoding",
+    "query_parameters_encoding_description": "Configure encoding for query parameters in requests",
     "profile": "Profile",
     "profile_description": "Update your profile details",
     "profile_email": "Email address",
