chore: update i18n text

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -20,6 +20,7 @@
     "dismiss": "Dismiss",
     "dont_save": "Don't save",
     "download_file": "Download file",
+    "download_test_report": "Download test report",
     "drag_to_reorder": "Drag to reorder",
     "duplicate": "Duplicate",
     "edit": "Edit",
