feat: add the ability to configure query params encoding for requests (#4412)
Co-authored-by: nivedin <nivedinp@gmail.com>
Co-authored-by: jamesgeorge007 <25279263+jamesgeorge007@users.noreply.github.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -62,7 +62,9 @@
     "turn_on": "Turn on",
     "undo": "Undo",
     "verify": "Verify",
-    "yes": "Yes"
+    "yes": "Yes",
+    "enable": "Enable",
+    "disable": "Disable"
   },
   "add": {
     "new": "Add new",
@@ -714,12 +716,16 @@
     "account_email_description": "Your primary email address.",
     "account_name_description": "This is your display name.",
     "additional": "Additional Settings",
+    "auto_encode_mode": "Auto",
+    "auto_encode_mode_tooltip": "Encode the parameters in the request only if some special characters are present",
     "background": "Background",
     "black_mode": "Black",
     "choose_language": "Choose language",
     "dark_mode": "Dark",
     "delete_account": "Delete account",
     "delete_account_description": "Once you delete your account, all your data will be permanently deleted. This action cannot be undone.",
+    "disable_encode_mode_tooltip": "Never encode the parameters in the request",
+    "enable_encode_mode_tooltip": "Always encode the parameters in the request",
     "expand_navigation": "Expand navigation",
     "experiments": "Experiments",
     "experiments_notice": "This is a collection of experiments we're working on that might turn out to be useful, fun, both, or neither. They're not final and may not be stable, so if something overly weird happens, don't panic. Just turn the dang thing off. Jokes aside, ",
@@ -728,11 +734,15 @@
     "extensions": "Browser extension",
     "extensions_use_toggle": "Use the browser extension to send requests (if present)",
     "follow": "Follow us",
+    "general": "General",
+    "general_description": " General settings used in the application",
     "interceptor": "Interceptor",
     "interceptor_description": "Middleware between application and APIs.",
     "language": "Language",
     "light_mode": "Light",
     "official_proxy_hosting": "Official Proxy is hosted by Hoppscotch.",
+    "query_parameters_encoding": "Query Parameters Encoding",
+    "query_parameters_encoding_description": "Configure encoding for query parameters in requests",
     "profile": "Profile",
     "profile_description": "Update your profile details",
     "profile_email": "Email address",
