fix(i18n): wrong translations key replaced in spanish lang

--- a/packages/hoppscotch-common/locales/es.json
+++ b/packages/hoppscotch-common/locales/es.json
@@ -139,7 +139,7 @@
       "redirect_no_client_id": "No se ha definido el ID de cliente",
       "redirect_no_client_secret": "No se ha definido ningún ID secreto de cliente",
       "redirect_no_code_verifier": "No se ha definido ningún verificador de códigos",
-      "redirect_no_token_punto final": "No se ha definido ningún punto final de token",
+      "redirect_no_token_endpoint": "No se ha definido ningún punto final de token",
       "something_went_wrong_on_oauth_redirect": "Algo ha ido mal durante la redirección OAuth",
       "something_went_wrong_on_token_generation": "Algo salió mal en la generación del token",
       "token_generation_oidc_discovery_failed": "Fallo en la generación del token: Error en el descubrimiento de OpenID Connect",
@@ -148,14 +148,14 @@
       "token_fetched_successfully": "Token recuperado correctamente",
       "token_fetch_failed": "Fallo al recuperar el token",
       "validation_failed": "Fallo de validación, comprueba los campos del formulario",
-      "label_authorization_punto final": "Punto final de autorización",
+      "label_authorization_endpoint": "Punto final de autorización",
       "label_client_id": "ID de cliente",
       "label_client_secret": "Secreto de cliente",
       "label_code_challenge": "Código de desafío",
       "label_code_challenge_method": "Método código de desafío",
       "label_code_verifier": "Verificador de código",
       "label_scopes": "Ámbitos",
-      "label_token_punto final": "Punto final de token",
+      "label_token_endpoint": "Punto final de token",
       "label_use_pkce": "Utilizar PKCE",
       "label_implicit": "Implícito",
       "label_password": "Contraseña",
@@ -257,7 +257,7 @@
     "collection": "Colección vacía",
     "collections": "No hay colecciones",
     "documentation": "Es necesario conectarse a un punto final de GraphQL para ver la documentación",
-    "punto final": "El punto final no puede estar vacío",
+    "endpoint": "El punto final no puede estar vacío",
     "environments": "No hay entornos",
     "folder": "Carpeta vacía",
     "headers": "Esta solicitud no tiene encabezados",
