feat: `openssl` based `hoppscotch-relay` for request forwarding (#4442)

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -79,6 +79,7 @@
     "not_running_title": "Agent not detected",
     "registration_title": "Agent registration",
     "verify_ssl_certs": "Verify SSL Certificates",
+    "ca_certs": "CA Certificates",
     "client_certs": "Client Certificates",
     "use_http_proxy": "Use HTTP Proxy",
     "proxy_capabilities": "Hoppscotch Agent supports HTTP/HTTPS/SOCKS proxies along with NTLM and Basic Auth in those proxies. Include the username and password for the proxy authentication in the URL itself.",
@@ -382,6 +383,7 @@
     "gql_prettify_invalid_query": "Couldn't prettify an invalid query, solve query syntax errors and try again",
     "incomplete_config_urls": "Incomplete configuration URLs",
     "incorrect_email": "Incorrect email",
+    "invalid_file_type": "Invalid file type for `{filename}`.",
     "invalid_link": "Invalid link",
     "invalid_link_description": "The link you clicked is invalid or expired.",
     "invalid_embed_link": "The embed does not exist or is invalid.",
