chore: enforce usage of Digest Authorization alongside `Agent` interceptor
Show a suitable warning via the inspector.

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -227,7 +227,8 @@
       "nonce_count": "Nonce Count",
       "client_nonce": "Client Nonce",
       "opaque": "Opaque",
-      "disable_retry": "Disable Retrying Request"
+      "disable_retry": "Disable Retrying Request",
+      "inspector_warning": "Agent interceptor is recommended when using Digest Authorization"
     }
   },
   "collection": {
