fix: account for inherited auth with the inspector warning

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -227,7 +227,7 @@
       "client_nonce": "Client Nonce",
       "opaque": "Opaque",
       "disable_retry": "Disable Retrying Request",
-      "inspector_warning": "Agent interceptor is recommended when using Digest Authorization"
+      "inspector_warning": "Agent interceptor is recommended when using Digest Authorization."
     }
   },
   "collection": {
