--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1046,7 +1046,7 @@
     "websocket": "WebSocket"
   },
   "team": {
-    "already_member": "You are already a member of this workspace. Contact your workspace owner.",
+    "already_member": "This email is associated with an existing user.",
     "create_new": "Create new workspace",
     "deleted": "Workspace deleted",
     "edit": "Edit Workspace",
@@ -1073,7 +1073,7 @@
     "login_to_continue": "Login to continue",
     "login_to_continue_description": "You need to be logged in to join a workspace.",
     "logout_and_try_again": "Logout and sign in with another account",
-    "member_has_invite": "This email ID already has an invite. Contact your workspace owner.",
+    "member_has_invite": "User already has an invite. Please ask them to check their inbox or revoke and resend the invite.",
     "member_not_found": "Member not found. Contact your workspace owner.",
     "member_removed": "User removed",
     "member_role_updated": "User roles updated",
@@ -1097,12 +1097,13 @@
     "select_a_team": "Select a workspace",
     "success_invites": "Success invites",
     "title": "Workspaces",
-    "we_sent_invite_link": "We sent an invite link to all invitees!",
+    "we_sent_invite_link": "Invitations are on the way",
     "invite_sent_smtp_disabled": "Invite links generated",
-    "we_sent_invite_link_description": "Ask all invitees to check their inbox. Click on the link to join the workspace.",
+    "we_sent_invite_link_description": " New invitees will receive a link to join the workspace, existing members and pending invitees won't receive a new link.",
     "invite_sent_smtp_disabled_description": "Sending invite emails is disabled for this instance of Hoppscotch. Please use the Copy link button to copy and share the invite link manually.",
     "copy_invite_link": "Copy Invite Link",
-    "search_title": "Team Requests"
+    "search_title": "Team Requests",
+    "user_not_found": "User not found in the instance."
   },
   "team_environment": {
     "deleted": "Environment Deleted",
