--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -99,7 +99,7 @@
     "last_used_on": "Last used on",
     "no_expiration": "No expiration",
     "no_expiration_verbose": "This token will never expire!",
-    "section_description": "Manage your Hoppscotch users through APIs with Infra tokens",
+    "section_description": "Manage your Hoppscotch users through APIs with Infra tokens.",
     "section_title": "Infra Tokens",
     "tab_title": "Infra Tokens",
     "token_expires_on": "This token will expire on",
@@ -252,6 +252,8 @@
   },
   "support": {
     "description": "Get help from the Hoppscotch community",
+    "documentation": "Documentation",
+    "more_info": "More Info",
     "title": "Need Help?"
   },
   "teams": {
@@ -332,6 +334,7 @@
     "invalid_user": "Invalid User",
     "invite_load_list_error": "Unable to Load Invited Users List",
     "invite_user": "Invite User",
+    "invite_users_description": "Send invites and onboard new users in no time.",
     "invited_by": "Invited By",
     "invited_on": "Invited On",
     "invited_users": "Invited Users",
@@ -348,6 +351,7 @@
     "not_available": "Not Available",
     "not_found": "User not found",
     "pending_invites": "Pending Invites",
+    "pending_invites_description": "Manage and track pending user invitations with clear status and actions.",
     "remove_admin_privilege": "Remove Admin Privilege",
     "remove_admin_status": "Remove Admin Status",
     "rename": "Rename",
